2014-06-29 John Wu <John dot Wu at ACM dot org>
	* src/ibin.h, src/irelic.h: add column object to the new
	constructors for ibis::bin and ibis::relic in order to set nrows
	* src/column.cpp: update attachIndex to use the new construtors

2014-06-28 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add virtual function dup to ibis::index class
	hierarchy, add copy constructors
	* src/column.cpp: in the copy constructor of ibis::column, invoke
	ibis::index::dup to copy the index when present
	* src/column.h: add function ibis::column::nRows()
	* src/index.cpp: add statements to set nrows in initBitmaps

2014-06-27 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: rename bheadle to breader, update versions of
	activate to make use breader for recreating the bitvectors
	* src/column.h, src/column.cpp: add function attachIndex for
	associating and index with a column
	* src/iapi.h, src/iapi.cpp: add fastbit_selection_osr to replace
	fastbit_selection_create, add fastbit_iapi_attach_index to
	associate an index with an array
	* src/ibin.cpp:6016 check for nobs==1 to prevent array out of
	bounds problems
	* src/iapi.cpp: revise implementation of
	fastbit_iapi_deconstruct_index to explicit copy the values from
	array_t objects to the output buffers
	* src/iapi.cpp:1491 _4 was in the wrong place
	* src/fileManager.h, src/array_t.h: add function release to give
	the space to user as a raw pointer.
	* src/iapi.h: remove the size information from
	fastbit_iapi_build_index, change fastbit_iapi_deconstruct_index to
	allocate the required memory
	* example/tiapi.c: modify the example to use the callback function
	FastBitReadIntArray to avoid passing all bitmaps to construct the
	index

2014-06-26 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add functions to deal with indexes
	* example/ibis.cpp: increase gVerbose when using
	ibis::bundle::print to generate output to files (to keep the
	regression suite running error free)